--- a/resources/views/inertia_layout.edge
+++ b/resources/views/inertia_layout.edge
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title inertia>AdonisJS x Inertia x VueJS</title>
+  <link rel="icon" href="favicon.png" type="image/png">
 
 
   @vite(['inertia/app/app.ts', `inertia/pages/${page.component}.vue`])
